--- a/Android/sliver.Android.csproj
+++ b/Android/sliver.Android.csproj
@@ -78,6 +78,7 @@
     <AndroidResource Include="Resources\drawable\marche.jpg" />
     <AndroidResource Include="Resources\drawable\masTacos.jpg" />
     <AndroidResource Include="Resources\drawable\thePharmacy.jpg" />
+    <AndroidResource Include="Resources\drawable\camera.png" />
   </ItemGroup>
   <Import Project="..\Sliver.Shared\Sliver.Shared.projitems" Label="Shared" Condition="Exists('..\Sliver.Shared\Sliver.Shared.projitems')" />
   <Import Project="$(MSBuildExtensionsPath)\Novell\Novell.MonoDroid.CSharp.targets" />
