--- a/Sliver.SDK/Sliver.SDK.csproj
+++ b/Sliver.SDK/Sliver.SDK.csproj
@@ -40,4 +40,8 @@
   <ItemGroup>
     <Folder Include="Model\" />
   </ItemGroup>
+  <ItemGroup>
+    <Reference Include="System.Xml" />
+    <Reference Include="System.Xml.Linq" />
+  </ItemGroup>
 </Project>
