--- a/Android/packages.config
+++ b/Android/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="ExifLib.PCL" version="1.0.0" targetFramework="MonoAndroid403" />
   <package id="Xamarin.Android.Support.v4" version="20.0.0" targetFramework="MonoAndroid403" />
   <package id="Xamarin.Forms" version="1.2.1.6229" targetFramework="MonoAndroid403" />
+  <package id="Xamarin.Forms.Labs" version="1.1.0" targetFramework="MonoAndroid403" />
 </packages>
